--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
                   <p>مبلغ</p>
                   <span>
                     <img
-                      class="table-header-icon price-chevron"
+                      class="table-header-icon price-chevron hidden"
                       src="../assets/icon/chevron.svg"
                       alt=""
                     />
@@ -58,7 +58,7 @@
                   <p>تاریخ تراکنش</p>
                   <span
                     ><img
-                      class="table-header-icon date-chevron"
+                      class="table-header-icon date-chevron hidden"
                       src="../assets/icon/chevron.svg"
                       alt=""
                   /></span>
@@ -75,6 +75,7 @@
             </tr> -->
           </table>
         </div>
+        <div class="msg-status"></div>
       </div>
     </div>
     <script src="./js/index.js"></script>
